# drf_github_stars

./: .gitignore  README.md  pyproject.toml
python_projects_api/: manage.py
python_projects_api/python_projects/: apiviews.py  apps.py  ingest.py  models.py  serializers.py  urls.py  views.py
python_projects_api/python_projects/migrations/: 0001_initial.py
python_projects_api/python_projects_api/: settings.py  urls.py  wsgi.py
